# Export fastrpc headers
fastrpc_includedir       = $(includedir)/fastrpc
fastrpc_include_HEADERS  = $(top_srcdir)/inc/AEEStdErr.h
fastrpc_include_HEADERS += $(top_srcdir)/inc/remote.h
fastrpc_include_HEADERS += $(top_srcdir)/inc/rpcmem.h

noinst_HEADERS = \
	AEEBufBound.h \
	AEEQList.h \
	AEEStdDef.h \
	AEEstd.h \
	HAP_debug.h \
	HAP_farf.h \
	HAP_farf_internal.h \
	HAP_pls.h \
	adsp_current_process.h \
	adsp_current_process1.h \
	adsp_default_listener.h \
	adsp_default_listener1.h \
	adsp_listener.h \
	adsp_listener1.h \
	adsp_perf.h \
	adsp_perf1.h \
	adsp_pls.h \
	adspmsgd_adsp.h \
	adspmsgd_adsp1.h \
	adspmsgd_apps.h \
	adspmsgd_internal.h \
	apps_mem.h \
	apps_mem_internal.h \
	apps_remotectl.h \
	apps_std.h \
	apps_std_internal.h \
	dspqueue.h \
	dspqueue_rpc.h \
	dspqueue_shared.h \
	dspsignal.h \
	fastrpc_apps_user.h \
	fastrpc_async.h \
	fastrpc_cap.h \
	fastrpc_common.h \
	fastrpc_config.h \
	fastrpc_context.h \
	fastrpc_hash_table.h \
	fastrpc_internal.h \
	fastrpc_ioctl.h \
	fastrpc_latency.h \
	fastrpc_log.h \
	fastrpc_mem.h \
	fastrpc_notif.h \
	fastrpc_perf.h \
	fastrpc_pm.h \
	fastrpc_procbuf.h \
	fastrpc_process_attributes.h \
	fastrpc_trace.h \
	listener_android.h \
	listener_buf.h \
	log_config.h \
	mod_table.h \
	mutex.h \
	platform_libs.h \
	pls.h \
	remote64.h \
	remotectl.h \
	remotectl1.h \
	rpcmem_internal.h \
	sbuf.h \
	sbuf_parser.h \
	shared.h \
	std_dtoa.h \
	uthash.h \
	verify.h \
	version.h
